@@ -25,7 +25,7 @@
         <java.version>25</java.version>
         <!-- Dependencies -->
         <springdoc-openapi-webmvc-ui.version>2.8.14</springdoc-openapi-webmvc-ui.version>
-        <swagger.annotations.version>2.2.40</swagger.annotations.version>
+        <swagger.annotations.version>2.2.41</swagger.annotations.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <hibernate.jpa.modelgen.version>7.1.10.Final</hibernate.jpa.modelgen.version>
         <archunit-junit5.version>1.4.1</archunit-junit5.version>
@@ -42,12 +42,20 @@
         <properties-maven-plugin.version>1.2.1</properties-maven-plugin.version>
         <openapi-generator-maven-plugin.version>7.17.0</openapi-generator-maven-plugin.version>
         <mock-server-version>5.15.0</mock-server-version>
+        <error-prone-core.version>2.44.0</error-prone-core.version>
+        <nullaway.version>0.12.12</nullaway.version>
         <!-- JaCoCo Properties -->
         <jacoco.version>0.8.11</jacoco.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.language>java</sonar.language>
+        <!-- OpenTelemetry Properties -->
+        <opentelemetry-bom.version>1.45.0</opentelemetry-bom.version>
+        <opentelemetry-spring-boot-starter.version>2.12.0</opentelemetry-spring-boot-starter.version>
+        <!-- Apache Pekko -->
+        <pekko-actor-typed_2.13.version>1.1.2</pekko-actor-typed_2.13.version>
+        <pekko-slf4j_2.13.version>1.1.2</pekko-slf4j_2.13.version>
 
     </properties>
 
@@ -58,10 +66,20 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Spring Cloud -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- OpenTelemetry -->
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>${opentelemetry-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -110,15 +128,29 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
        <!--   CACHE     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+        <!-- LOCAL CACHE (L1) -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
+        </dependency>
+        <!-- REDIS CACHE (L2) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
         <!-- Spring Boot OAuth2 Client Dependency -->
@@ -131,6 +163,10 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-resource-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
 
         <!-- Database Dependencies-->
@@ -244,13 +280,36 @@
             <version>${mock-server-version}</version>
             <scope>test</scope>
         </dependency>
-
-        <!-- Model Training -->
-        <!-- Deeplearning4j (DL4J) -->
+        <!-- Core OTel -->
         <dependency>
-            <groupId>org.deeplearning4j</groupId>
-            <artifactId>deeplearning4j-core</artifactId>
-            <version>1.0.0-M2.1</version>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk</artifactId>
+        </dependency>
+        <!-- Auto instrumentation for Spring Boot -->
+        <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-spring-boot-starter</artifactId>
+            <version>${opentelemetry-spring-boot-starter.version}</version>
+        </dependency>
+        <!-- OTLP exporter -->
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-otlp</artifactId>
+        </dependency>
+        <!-- Apache Pekko -->
+        <dependency>
+            <groupId>org.apache.pekko</groupId>
+            <artifactId>pekko-actor-typed_2.13</artifactId>
+            <version>${pekko-actor-typed_2.13.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pekko</groupId>
+            <artifactId>pekko-slf4j_2.13</artifactId>
+            <version>${pekko-slf4j_2.13.version}</version>
         </dependency>
     </dependencies>
 
@@ -259,6 +318,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+
+                <configuration>
+                    <jvmArguments>
+                        -javaagent:${project.build.directory}/opentelemetry-javaagent.jar
+                    </jvmArguments>
+                </configuration>
+
                 <executions>
                     <execution>
                         <id>build-info</id>
@@ -266,8 +332,15 @@
                             <goal>build-info</goal>
                         </goals>
                     </execution>
+
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
+
 
             <!-- Code Formatting -->
             <plugin>
@@ -284,12 +357,65 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+
+                <executions>
+                    <execution>
+                        <id>copy-otel-agent</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>io.opentelemetry.javaagent</groupId>
+                                    <artifactId>opentelemetry-javaagent</artifactId>
+                                    <version>${opentelemetry-spring-boot-starter.version}</version>
+                                    <outputDirectory>${project.build.directory}</outputDirectory>
+                                    <destFileName>opentelemetry-javaagent.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- Generation of API server and clients -->
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
                 <version>${openapi-generator-maven-plugin.version}</version>
                 <executions>
+                    <!-- Generate NAGER.DATE Public Holidays API client -->
+                    <execution>
+                        <id>generate-nagerdate-api-client</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>
+                                ${project.basedir}/src/main/resources/external-service/nagerdate/api-version-3.yaml
+                            </inputSpec>
+                            <generatorName>spring</generatorName>
+                            <generateModelTests>false</generateModelTests>
+                            <generateApiTests>false</generateApiTests>
+                            <configOptions>
+                                <library>spring-cloud</library>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <sourceFolder>src/gen/java/main</sourceFolder>
+                                <apiPackage>com.gersimuca.api.external.nagerdate</apiPackage>
+                                <modelPackage>com.gersimuca.model.external.nagerdate</modelPackage>
+                                <configPackage>com.gersimuca.api.external.nagerdate.config</configPackage>
+                                <useTags>true</useTags>
+                                <generateSupportingFiles>true</generateSupportingFiles>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+
                     <!-- Generate External API server -->
                     <execution>
                         <id>generate-api-server</id>
@@ -316,37 +442,6 @@
                 </executions>
             </plugin>
 
-<!--            &lt;!&ndash; Generation of GraphQL API server and clients, mirroring OpenAPI layout &ndash;&gt;-->
-<!--            <plugin>-->
-<!--                <groupId>io.github.kobylynskyi</groupId>-->
-<!--                <artifactId>graphql-codegen-maven-plugin</artifactId>-->
-<!--                <version>5.10.0</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>generate-graphql-server</id>-->
-<!--                        <goals>-->
-<!--                            <goal>generate</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            &lt;!&ndash; Path to your GraphQL schema &ndash;&gt;-->
-<!--                            <schemaPaths>-->
-<!--                                <param>${project.basedir}/src/main/resources/graphql/schema.graphqls</param>-->
-<!--                            </schemaPaths>-->
-<!--                            <outputDir>${project.basedir}/src/gen/java/main</outputDir>-->
-
-<!--                            <packageName>com.gersimuca.erp.graphql</packageName>-->
-<!--                            <modelPackageName>com.gersimuca.erp.graphql.model</modelPackageName>-->
-<!--                            <apiPackageName>com.gersimuca.erp.graphql.api</apiPackageName>-->
-
-<!--                            <generateApis>true</generateApis>-->
-<!--                            <generateModels>true</generateModels>-->
-<!--                            <generateParameterizedFieldsResolvers>true</generateParameterizedFieldsResolvers>-->
-<!--                            <generateClient>true</generateClient>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -354,25 +449,25 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-<!--                    <encoding>UTF-8</encoding>-->
-<!--                    <fork>true</fork>-->
+                    <encoding>UTF-8</encoding>
+                    <fork>true</fork>
 
-<!--                    &lt;!&ndash; ErrorProne + NullAway compiler args &ndash;&gt;-->
-<!--                    <compilerArgs>-->
-<!--                        <arg>-XDcompilePolicy=simple</arg>-->
-<!--                        <arg>&#45;&#45;should-stop=ifError=FLOW</arg>-->
-<!--                        <arg>-Xplugin:ErrorProne -Xep:NullAway:ERROR -XepOpt:NullAway:OnlyNullMarked</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
-<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>-->
-<!--                    </compilerArgs>-->
+                    <!-- ErrorProne + NullAway compiler args -->
+                    <compilerArgs>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>--should-stop=ifError=FLOW</arg>
+                        <arg>-Xplugin:ErrorProne -Xep:NullAway:ERROR -XepOpt:NullAway:OnlyNullMarked -XepExcludedPaths:.*/target/.*</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                    </compilerArgs>
 
                     <annotationProcessorPaths>
                         <!-- Lombok -->
@@ -393,17 +488,18 @@
                             <artifactId>hibernate-jpamodelgen</artifactId>
                             <version>${hibernate.jpa.modelgen.version}</version>
                         </path>
-                        <!-- Error Prone + NullAway -->
-<!--                        <path>-->
-<!--                            <groupId>com.google.errorprone</groupId>-->
-<!--                            <artifactId>error_prone_core</artifactId>-->
-<!--                            <version>2.43.0</version>-->
-<!--                        </path>-->
-<!--                        <path>-->
-<!--                            <groupId>com.uber.nullaway</groupId>-->
-<!--                            <artifactId>nullaway</artifactId>-->
-<!--                            <version>0.12.2</version>-->
-<!--                        </path>-->
+                        <!-- Error Prone -->
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>${error-prone-core.version}</version>
+                        </path>
+                        <!-- NullAway -->
+                        <path>
+                            <groupId>com.uber.nullaway</groupId>
+                            <artifactId>nullaway</artifactId>
+                            <version>${nullaway.version}</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
